--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="shinobi.code.safely">
 
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
@@ -6,10 +7,13 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="safely"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        tools:ignore="GoogleAppIndexWarning">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -29,5 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <service android:name=".TheService"
+            android:enabled="true" />
     </application>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
