--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   easy_dialogs: ^1.0.0
-
+  permission_handler: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
