--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
          FlutterApplication and put your custom class here. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:name="io.flutter.app.FlutterApplication"
@@ -38,6 +39,9 @@
             </intent-filter>
         </activity>
         <service android:name=".TheService"
+            android:enabled="true" />
+        <service
+            android:name=".LocationService"
             android:enabled="true" />
     </application>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
