Implemented a contacts screen. SharedPrefs gets updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: safely
-description: This is my final year project. It is a flutter application for people who might be in danger of being kidnapped&#x2F;raped. This README will be updated as time goes on. 
+description: This is my final year project. It is a flutter application for people who might be in danger of being kidnapped&#x2F;raped. This README will be updated as time goes on.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -25,6 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   easy_dialogs: ^1.0.0
   permission_handler: ^3.0.0
+  contacts_service: ^0.2.4
+  pref_dessert: ^0.2.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -41,7 +44,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/safely_logo.png
+  - assets/images/safely_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
