--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,7 +65,8 @@ dependencies {
     implementation "com.github.nisrulz:sensey:1.8.0"
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'io.nlopez.smartlocation:library:3.3.3'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    compile "org.jetbrains.kotlin:kotlin-script-runtime:1.3.21"
+
 }
