--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -40,9 +40,7 @@
         </activity>
         <service android:name=".TheService"
             android:enabled="true" />
-        <service
-            android:name=".LocationService"
-            android:enabled="true" />
+        <service android:name="LocationService" android:enabled="true"/>
     </application>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
